--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -103,6 +103,7 @@
                             <a class="nav-link text-danger fw-bold dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consultas</a>
                             <ul class="dropdown-menu bg-dark border-2 border-secondary">
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Albumes" asp-action="AlbumesYCanciones">Albumes y Canciones</a></li>
+                                <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Giras" asp-action="InfoGiras">Información de las Giras</a></li>
                             </ul>
                         </li>
                     </ul>
