Añadir validador/filtro a CancionesViewComponent.

--- a/MvcWebMusica2/Views/Shared/Components/Canciones/Default.cshtml
+++ b/MvcWebMusica2/Views/Shared/Components/Canciones/Default.cshtml
@@ -6,10 +6,10 @@
             <th>
                 @Html.DisplayNameFor(model => model.Titulo)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Duracion)
             </th>
-            <th>
+            <th class="text-center">
                 @Html.DisplayNameFor(model => model.Single)
             </th>
         </tr>
@@ -29,10 +29,10 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.Titulo)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Duracion)
                 </td>
-                <td>
+                <td class="text-center">
                     @Html.DisplayFor(modelItem => item.Single)
                 </td>
             </tr>
