--- a/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
+++ b/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<MvcWebMusica2.Models.Albumes>
+﻿@using MvcWebMusica2.Services.Specification
+@model IEnumerable<MvcWebMusica2.Models.Albumes>
 
 @{
     ViewData["Title"] = "Albumes Y Canciones";
@@ -41,9 +42,10 @@
                 </td>
             </tr>
             <tr>
-                <td colspan="4">
-                    @await Component.InvokeAsync("CancionesPorAlbum", item.Id)
+                <td colspan="3" class="border-end-0">
+                    @await Component.InvokeAsync("Canciones", new CancionesPorAlbumSpecification(item.Id))
                 </td>
+                <td class="border-start-0"></td>
             </tr>
         }
     </tbody>
