--- a/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
+++ b/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="text-center">Albumes Y Canciones</h1>
 
-<table class="table table-bordered border-primary table-hover">
+<table class="table table-bordered border-primary table-hover tabla-sin-orden">
     <thead class="bg-dark bg-opacity-75 text-light">
         <tr>
             <th class="text-center">
@@ -22,31 +22,37 @@
             <th class="text-center">
                 @Html.DisplayNameFor(model => model.Generos)
             </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Canciones)
+            </th>
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
             <tr class="bg-info bg-opacity-25">
-                <td>
+                <td class="align-middle">
                     @Html.DisplayFor(modelItem => item.Nombre)
                 </td>
-                <td>
+                <td class="align-middle">
                     @Html.DisplayFor(modelItem => item.Grupos!.Nombre)
                 </td>
-                <td class="text-center">
+                <td class="text-center align-middle">
                     @Html.DisplayFor(modelItem => item.Fecha)
                 </td>
-                <td class="text-center">
+                <td class="text-center align-middle">
                     @Html.DisplayFor(modelItem => item.Generos!.Nombre)
                 </td>
+                <td>
+                    @await Component.InvokeAsync("Canciones", new CancionesPorAlbumSpecification(item.Id))
+                </td>
             </tr>
-            <tr>
+            @* <tr>
                 <td colspan="3" class="border-end-0">
                     @await Component.InvokeAsync("Canciones", new CancionesPorAlbumSpecification(item.Id))
                 </td>
                 <td class="border-start-0"></td>
-            </tr>
+            </tr> *@
         }
     </tbody>
 </table>
