--- a/MvcWebMusica2/Views/Giras/InfoGiras.cshtml
+++ b/MvcWebMusica2/Views/Giras/InfoGiras.cshtml
@@ -4,29 +4,40 @@
     ViewData["Title"] = "InfoGiras";
 }
 
-<h1>Información de las Giras</h1>
+<h1 class="text-center">Información de las Giras</h1>
 
-<table class="table table-bordered border-primary table-hover tabla-indice">
-    <thead class="table-primary">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Nombre)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Conciertos)
-        </th>
-    </tr>
+<table class="table table-striped table-bordered table-hover">
+    <thead class="bg-dark bg-opacity-75 text-light">
+        <tr>
+
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Grupos)
+            </th>
+            <th class="text-center">
+                @Html.DisplayNameFor(model => model.Nombre)
+            </th>
+
+        </tr>
     </thead>
     <tbody>
-    @foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
+        @foreach (var item in Model)
+        {
+            <tr>
+
+                <td class="text-end align-middle">
+                    @Html.DisplayFor(modelItem => item.Grupos!.Nombre)
+                </td>
+                <td class="text-center align-middle">
+                    @Html.DisplayFor(modelItem => item.Nombre)
+                </td>
+
+            </tr>
+            <tr>
+                <td class="border-end-0"></td>
+                <td class="text-center border-start-0">
                     @await Component.InvokeAsync("Giras", item.Id)
-            </td>
-        </tr>
-    }
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
