--- a/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
+++ b/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
@@ -1,35 +1,35 @@
 ﻿@model System.Collections.Generic.IEnumerable<MvcWebMusica2.Models.Conciertos>
 
-<table class="table table-bordered border-primary table-hover">
-    <thead class="table-primary">
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Ciudades)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Fecha)
-            </th>
-        </tr>
-    </thead>
+<table class="table table-borderless table-hover">
+    @*  <thead class="table-primary">
+    <tr>
+    <th>
+    @Html.DisplayNameFor(model => model.Ciudades)
+    </th>
+    <th>
+    @Html.DisplayNameFor(model => model.Fecha)
+    </th>
+    </tr>
+    </thead> *@
     <tbody>
-    @if (Model.Count() == 0)
-    {
-        <tr>
-            <td colspan ="2">
-                No hay datos disponibles
-            </td>
-        </tr>
-    }
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Direccion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Fecha)
-            </td>
-        </tr>
-    }
+        @if (Model.Count() == 0)
+        {
+            <tr>
+                <td colspan="2" class="text-center text-danger fw-bold">
+                    No hay datos disponibles
+                </td>
+            </tr>
+        }
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Direccion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Fecha)
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
