--- a/MvcWebMusica2/Views/Representantes/Index.cshtml
+++ b/MvcWebMusica2/Views/Representantes/Index.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>Representantes</h1>
-
+<a class="btn btn-outline-primary" asp-action="DescargarExcel">Descargar Excel</a>
 <p>
     <a asp-action="Create"><i class="ps-3 fs-3 fa-solid fa-file-circle-plus" title="Crear nueva entrada"></i></a>
 </p>
