--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -41,7 +41,9 @@
         <!-- AÑADIDO -->
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">HOME</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img class="img-responsive" width="100" src="/img/logo/logo.png" alt="logo" />
+                </a>
                 <button class="navbar-toggler collapsed d-flex d-sm-none flex-column justify-content-around"
                         type="button"
                         data-bs-toggle="collapse"
