Mejoras visuales: Aumentar margen superior e inferior del Div que contiene el RenderBody en _Layout.cshtml. Quitar el AsParallel en el filtrado de canciones en CancionesViewComponent.

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -111,7 +111,7 @@
             </div>
         </nav>
     </header>
-    <div class="container vistas px-3">
+    <div class="container vistas px-3 my-5">
         <main role="main" class="py-3">
             @RenderBody()
         </main>
