--- a/MvcWebMusica2/wwwroot/css/site.css
+++ b/MvcWebMusica2/wwwroot/css/site.css
@@ -39,7 +39,7 @@ body {
 
 
 
-/*************** Cabecera ***************/
+/*************** Home/Index ***************/
 .masthead {
     min-height: 30rem;
     position: relative;
