Navbar css + icono menú hamburguesa

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -39,12 +39,12 @@
 
 
         <!-- AÑADIDO -->
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+        <nav class="navbar navbar-expand-md navbar-toggleable-md border-bottom box-shadow mb-3 bg-negro">
+            <div class="container-fluid mx-5">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img class="img-responsive" width="100" src="/img/logo/logo.png" alt="logo" />
                 </a>
-                <button class="navbar-toggler collapsed d-flex d-sm-none flex-column justify-content-around"
+                <button class="navbar-toggler collapsed d-flex d-md-none flex-column justify-content-around"
                         type="button"
                         data-bs-toggle="collapse"
                         data-bs-target=".navbar-collapse"
@@ -54,8 +54,8 @@
                     <span class="toggler-icon middle-bar"></span>
                     <span class="toggler-icon bottom-bar"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
+                    <ul class="navbar-nav justify-content-end flex-grow-1">
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Latest Album</a></li>
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Featured Album</a></li>
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Join Us</a></li>
@@ -119,7 +119,6 @@
             </div>
         </nav>
         <!-- FIN DEL AÑADIDO-->
-
 
         <!-- primary menu -->
         @* <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-6">
@@ -195,6 +194,7 @@
                 </div>
             </div>
         </nav> *@
+
     </header>
     <div class="container vistas px-3">
         <main role="main" class="py-3">
