Enlaces del navBar centrados

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -54,7 +54,7 @@
                     <span class="toggler-icon bottom-bar"></span>
                 </button>
                 <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
-                    <ul class="navbar-nav justify-content-end flex-grow-1">
+                    <ul class="navbar-nav justify-content-center flex-grow-1">
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Latest Album</a></li>
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Featured Album</a></li>
                         <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Join Us</a></li>
