Faltaba mi menu

--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
                             <ul class="dropdown-menu bg-dark border-2 border-secondary">
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Albumes" asp-action="AlbumesYCanciones">Albumes y Canciones</a></li>
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Giras" asp-action="InfoGiras">Información de las Giras</a></li>
+                                <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Artistas" asp-action="ArtistasYFunciones">Artistas y Funciones</a></li>
                             </ul>
                         </li>
                     </ul>
