--- a/MvcWebMusica2/Views/Empleados/Details.cshtml
+++ b/MvcWebMusica2/Views/Empleados/Details.cshtml
@@ -25,6 +25,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id"><i class="fa-solid fa-pen-to-square fs-3 mt-3" title="Editar"></i></a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id"><i class="fa-solid fa-pen-to-square fs-3 mt-3" title="Editar"></i></a> |
     <a asp-action="Index"><i class="fa-solid fa-rotate-left fs-3 mt-3" title="Volver al listado"></i></a>
 </div>
