--- a/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
+++ b/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
@@ -12,7 +12,7 @@
     </tr>
     </thead> *@
     <tbody>
-        @if (Model.Count() == 0)
+        @if (!Model.Any()) // Modificación (Model.Count() == 0)
         {
             <tr>
                 <td colspan="2" class="text-center text-danger fw-bold">
