--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
         </nav>
 
         <!-- AÑADIDO -->
-        <nav class="navbar navbar-expand-md navbar-toggleable-md border-bottom box-shadow mb-3 bg-negro">
+        <nav class="navbar navbar-expand-md navbar-toggleable-md border-bottom box-shadow mb-3 bg-dark">
             <div class="container-fluid mx-5">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img class="img-responsive" width="100" src="/img/logo/logo.png" alt="logo" />
@@ -55,15 +55,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-md-inline-flex justify-content-between">
                     <ul class="navbar-nav justify-content-center flex-grow-1">
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Latest Album</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Featured Album</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Join Us</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Portfolio</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Events</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Team</a></li>
-                        <li class="nav-item"><a class="nav-link text-danger fw-bold" href="#">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Latest Album</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Featured Album</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Join Us</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Portfolio</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Events</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Team</a></li>
+                        <li class="nav-item"><a class="nav-link text-danger fw-bold fs-5" href="#">Contact</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-danger fw-bold dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Formularios</a>
+                            <a class="nav-link text-danger fw-bold dropdown-toggle fs-5" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Formularios</a>
                             <ul class="dropdown-menu bg-dark border-2 border-secondary">
                                 <li class="nav-item dropdown">
                                     <a class="dropdown-item text-danger fw-bold" href="#">Música &raquo;</a>
@@ -107,7 +107,7 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link text-danger fw-bold dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consultas</a>
+                            <a class="nav-link text-danger fw-bold fs-5 dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Consultas</a>
                             <ul class="dropdown-menu bg-dark border-2 border-secondary">
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Albumes" asp-action="AlbumesYCanciones">Albumes y Canciones</a></li>
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Giras" asp-action="InfoGiras">Información de las Giras</a></li>
