--- a/MvcWebMusica2/Views/Shared/_Layout.cshtml
+++ b/MvcWebMusica2/Views/Shared/_Layout.cshtml
@@ -112,6 +112,7 @@
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Albumes" asp-action="AlbumesYCanciones">Albumes y Canciones</a></li>
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Giras" asp-action="InfoGiras">Información de las Giras</a></li>
                                 <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Artistas" asp-action="ArtistasYFunciones">Artistas y Funciones</a></li>
+                                <li><a class="dropdown-item text-danger fw-bold" asp-area="" asp-controller="Grupos" asp-action="ArtistasYGrupos">Grupos y Atistas</a></li>
                             </ul>
                         </li>
                     </ul>
