--- a/MvcWebMusica2/Views/Giras/InfoGiras.cshtml
+++ b/MvcWebMusica2/Views/Giras/InfoGiras.cshtml
@@ -6,7 +6,7 @@
 
 <h1 class="text-center">Información de las Giras</h1>
 
-<table class="table table-striped table-bordered table-hover">
+<table class="table table-bordered table-hover">
     <thead class="bg-dark bg-opacity-75 text-light">
         <tr>
 
@@ -22,7 +22,7 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+            <tr class="table-info">
 
                 <td class="text-end align-middle">
                     @Html.DisplayFor(modelItem => item.Grupos!.Nombre)
