Correciones en los metadata en Models.

--- a/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
+++ b/MvcWebMusica2/Views/Albumes/AlbumesYCanciones.cshtml
@@ -7,11 +7,8 @@
 }
 
 <h1 class="text-center">Albumes Y Canciones</h1>
-<div id="btn-export">
 
-</div>
-
-<table class="table table-bordered border-primary table-hover tabla-export">
+<table class="table table-bordered border-primary table-hover tabla-export" data-page-length="25">
     <thead class="bg-dark bg-opacity-75 text-light">
     <tr>
         <th class="text-center">
@@ -60,9 +57,3 @@
     }
     </tbody>
 </table>
-
-<script>
-
-
-    tabla1.buttons().container().appendTo('#btn-export');
-</script>
