--- a/MvcWebMusica2/Views/Shared/Components/ArtistasFunciones/Default.cshtml
+++ b/MvcWebMusica2/Views/Shared/Components/ArtistasFunciones/Default.cshtml
@@ -18,7 +18,7 @@
                     
             </td>
             <td>
-                    @Html.DisplayFor(modelItem => item.Funciones.Nombre)
+                    @Html.DisplayFor(modelItem => item.Funciones!.Nombre)
             </td>
         </tr>
     }
