--- a/MvcWebMusica2/Views/VideoClips/Create.cshtml
+++ b/MvcWebMusica2/Views/VideoClips/Create.cshtml
@@ -12,10 +12,10 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @* <div class="form-group">
+            <div class="form-group">
                 <label asp-for="CancionesId" class="control-label"></label>
                 <select asp-for="CancionesId" class ="form-control" asp-items="ViewBag.CancionesId"></select>
-            </div> *@
+            </div>
             <div class="form-group">
                 <label asp-for="Fecha" class="control-label"></label>
                 <input asp-for="Fecha" class="form-control" />
