--- a/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
+++ b/MvcWebMusica2/Views/Shared/Components/Giras/Default.cshtml
@@ -14,7 +14,7 @@
     <tbody>
 
         @{
-            @if (Model.Count() == 0)
+            @if (!Model.Any())
             {
                 <tr>
                     <td colspan="2" class="text-center text-danger fw-bold">
